@@ -1,3 +1,7 @@
+2009-07-15 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* Font.cs: implement OriginalFontName.
+
 2009-07-15  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* gdipFunctions.cs: Fix XVisualIDFromVisual to return an IntPtr
